# agenda-escolar

./: AgendaEscolar.spec  README.md  agenda-escolar.spec  pyproject.toml
