[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenda-escolar"
version = "0.1.0"
authors = [
{ name="Ramat, Juan Pablo", email="ramatjuanpablo@gmail.com" },
]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agenda-escolar = "agendaescolar.main:main"
